--- a/desktop/src/app.html
+++ b/desktop/src/app.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-color: #18181b;">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<style>html, body { background-color: #18181b; margin: 0; padding: 0; min-height: 100%; }</style>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" style="background-color: #18181b;">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
